--- a/presentation.html
+++ b/presentation.html
@@ -121,6 +121,17 @@
     </div>
 
     <div class="section">
+      <h2>DAO Governance (Live)</h2>
+      <p>The PoIP DAO is now live on Polygon. $POI holders may vote on proposals to evolve the protocol. Governance is symbolic until full DAO execution infrastructure is in place.</p>
+      <p><strong>DAO Contract Address:</strong><br>
+        <a href="https://polygonscan.com/address/0x432431ef1cAAFeFDF80A27FB1a399A35A858cEC6" target="_blank">
+          0x432431ef1cAAFeFDF80A27FB1a399A35A858cEC6
+        </a>
+      </p>
+      <p>1 $POI = 1 Vote | Proposals are created on-chain and voted on by token holders.</p>
+    </div>
+
+    <div class="section">
       <h2>Support PoIP on Giveth</h2>
       <p>You can support the growth of the Proof of Impact Protocol by donating directly through our official Giveth page.</p>
       <a class="support-button" href="https://giveth.io/project/proof-of-impact-protocol" target="_blank">Donate via Giveth</a>
