--- a/presentation.html
+++ b/presentation.html
@@ -123,12 +123,8 @@
     <div class="section">
       <h2>DAO Governance (Live)</h2>
       <p>The PoIP DAO is now live on Polygon. $POI holders may vote on proposals to evolve the protocol. Governance is symbolic until full DAO execution infrastructure is in place.</p>
-      <p><strong>DAO Contract Address:</strong><br>
-        <a href="https://polygonscan.com/address/0x432431ef1cAAFeFDF80A27FB1a399A35A858cEC6" target="_blank">
-          0x432431ef1cAAFeFDF80A27FB1a399A35A858cEC6
-        </a>
-      </p>
       <p>1 $POI = 1 Vote | Proposals are created on-chain and voted on by token holders.</p>
+      <a class="button" href="https://polygonscan.com/address/0x432431ef1cAAFeFDF80A27FB1a399A35A858cEC6" target="_blank">View DAO Contract</a>
     </div>
 
     <div class="section">
