--- a/stake.html
+++ b/stake.html
@@ -1,45 +1,140 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <title>Stake Simulation – Sepolia Testnet</title>
-  <script src="https://cdn.jsdelivr.net/npm/ethers/dist/ethers.min.js"></script>
+  <title>Stake $POI — Proof of Impact Protocol</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <script src="https://cdn.jsdelivr.net/npm/web3@1.10.0/dist/web3.min.js"></script>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #f4f9ff;
+      padding: 40px;
+      text-align: center;
+      color: #2c3e50;
+    }
+    .container {
+      max-width: 600px;
+      margin: auto;
+      background: white;
+      border-radius: 12px;
+      padding: 30px;
+      box-shadow: 0 0 20px rgba(0,0,0,0.1);
+    }
+    h1 {
+      color: #1a73e8;
+    }
+    input, button {
+      padding: 12px;
+      margin: 10px;
+      width: 80%;
+      font-size: 16px;
+    }
+    button {
+      background-color: #1a73e8;
+      color: white;
+      border: none;
+      border-radius: 6px;
+      cursor: pointer;
+    }
+    .status {
+      margin-top: 20px;
+      color: #388e3c;
+      font-weight: bold;
+    }
+  </style>
 </head>
 <body>
-  <h2>Stake Simulation – Sepolia Testnet</h2>
-  <p>Connect your MetaMask wallet to simulate staking ETH. You’ll earn symbolic $GROW rewards while your stake helps grow the treasury. The protocol uses this yield to fund real-world impact.</p>
-  <button onclick="connectWallet()">Connect Wallet</button>
-  <br><br>
-  <label>Enter amount to stake (ETH):</label>
-  <input type="text" id="amount" value="0.01">
-  <button onclick="simulateStake()">Simulate Stake</button>
-  <p id="status"></p>
+  <div class="container">
+    <h1>Stake $POI</h1>
+    <p>Support the Proof of Impact Protocol by staking your $POI tokens.</p>
+    <button onclick="connectWallet()">Connect Wallet</button>
+    <br />
+    <input type="number" id="stakeAmount" placeholder="Amount of $POI to stake" />
+    <button onclick="stakeTokens()">Stake</button>
+    <br />
+    <button onclick="unstakeTokens()">Unstake</button>
+    <br />
+    <button onclick="checkStake()">Check My Stake</button>
+    <div class="status" id="statusMessage"></div>
+  </div>
 
   <script>
-    let provider, signer;
+    const contractAddress = "0xFe3A6dEf0F7Ece7486604D2f64d248Eb6bB8983F";
+    const abi = [
+      {
+        "inputs": [],
+        "name": "stake",
+        "outputs": [],
+        "stateMutability": "payable",
+        "type": "function"
+      },
+      {
+        "inputs": [],
+        "name": "unstake",
+        "outputs": [],
+        "stateMutability": "nonpayable",
+        "type": "function"
+      },
+      {
+        "inputs": ["address"],
+        "name": "stakes",
+        "outputs": ["uint256"],
+        "stateMutability": "view",
+        "type": "function"
+      }
+    ];
+
+    let web3;
+    let account;
+    let contract;
 
     async function connectWallet() {
       if (window.ethereum) {
-        provider = new ethers.providers.Web3Provider(window.ethereum);
-        await provider.send("eth_requestAccounts", []);
-        signer = provider.getSigner();
-        document.getElementById("status").innerText = "Wallet connected!";
+        web3 = new Web3(window.ethereum);
+        await window.ethereum.request({ method: 'eth_requestAccounts' });
+        const accounts = await web3.eth.getAccounts();
+        account = accounts[0];
+        contract = new web3.eth.Contract(abi, contractAddress);
+        document.getElementById("statusMessage").innerText = "Wallet connected: " + account;
       } else {
         alert("Please install MetaMask.");
       }
     }
 
-    async function simulateStake() {
-      const amount = document.getElementById("amount").value;
-      const tx = {
-        to: signer.getAddress(),
-        value: ethers.utils.parseEther(amount)
-      };
+    async function stakeTokens() {
+      const amount = document.getElementById("stakeAmount").value;
+      if (!amount) return alert("Please enter a valid amount.");
       try {
-        const transaction = await signer.sendTransaction(tx);
-        document.getElementById("status").innerText = `Stake simulated! TX: ${transaction.hash}`;
-      } catch (err) {
-        document.getElementById("status").innerText = `Error: ${err.message}`;
+        await contract.methods.stake().send({
+          from: account,
+          value: web3.utils.toWei(amount, "ether")
+        });
+        document.getElementById("statusMessage").innerText = `Staked ${amount} ETH worth of $POI successfully.`;
+      } catch (error) {
+        document.getElementById("statusMessage").innerText = "Staking failed.";
+        console.error(error);
+      }
+    }
+
+    async function unstakeTokens() {
+      try {
+        await contract.methods.unstake().send({ from: account });
+        document.getElementById("statusMessage").innerText = "Unstake successful.";
+      } catch (error) {
+        document.getElementById("statusMessage").innerText = "Unstake failed.";
+        console.error(error);
+      }
+    }
+
+    async function checkStake() {
+      try {
+        const result = await contract.methods.stakes(account).call();
+        const stakeInEth = web3.utils.fromWei(result, "ether");
+        document.getElementById("statusMessage").innerText = `Your current stake: ${stakeInEth} ETH worth of $POI.`;
+      } catch (error) {
+        document.getElementById("statusMessage").innerText = "Unable to retrieve stake.";
+        console.error(error);
       }
     }
   </script>
