--- a/presentation.html
+++ b/presentation.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>PoIP – Proof of Impact Protocol</title>
+  <title>Proof of Impact Protocol (PoIP)</title>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <style>
@@ -38,36 +38,20 @@
       text-decoration: none;
       border-radius: 8px;
     }
-    .support-button {
-      display: inline-block;
-      margin-top: 10px;
-      padding: 14px 28px;
-      background: #ff007a;
-      color: white;
-      font-weight: bold;
-      text-decoration: none;
-      border-radius: 8px;
-    }
-    .follow-button {
-      display: inline-block;
-      margin-top: 10px;
-      padding: 14px 28px;
-      background: #1da1f2;
-      color: white;
-      font-weight: bold;
-      text-decoration: none;
-      border-radius: 8px;
-    }
     .section {
       margin-top: 40px;
       text-align: left;
+    }
+    .footer {
+      font-size: 13px;
+      color: #888;
+      margin-top: 40px;
     }
   </style>
 </head>
 <body>
   <div class="container">
     <h1>Proof of Impact Protocol (PoIP)</h1>
-    <h3><em>Powered by blockchain. Automated by AI. Built for humanity.</em></h3>
     <h3><em>A trustless system for funding real-world impact — transparently, verifiably, and at scale.</em></h3>
 
     <div class="section">
@@ -79,7 +63,7 @@
       PoIP is a decentralized public-good protocol that turns crypto staking into verifiable real-world impact. Users stake tokens into a pooled treasury. The yield is used to fund AI-verified bounties (e.g. laptops for schools, clean water, medical supplies). Proof of delivery is posted publicly. Stakers earn symbolic $GROW tokens as reputation rewards.</p>
 
       <p><strong>How It Works:</strong><br>
-      • Stake crypto → treasury grows<br>
+      • Stake $POI → treasury grows<br>
       • AI selects high-impact bounties<br>
       • Yield funds the solution directly<br>
       • On-chain proof confirms completion<br>
@@ -87,65 +71,36 @@
 
       <p><strong>Why It’s Different:</strong><br>
       • 100% transparent and auditable<br>
-      • AI-powered, DAO-governed coordination<br>
+      • AI-powered, DAO-guided coordination<br>
       • No middlemen or speculation<br>
       • Only verified bounties are funded<br>
       • Built with sustainability and scale in mind</p>
-
-      <p><strong>Current Status:</strong><br>
-      • Fully functional testnet simulation live<br>
-      • Deployed $GROW token on Sepolia<br>
-      • Live staking + treasury growth demo<br>
-      • Whitepaper, NGO onboarding, and proof system in place<br>
-      • Presentation-ready and grant-ready</p>
-
-      <p><strong>Funding Request:</strong><br>
-      We are seeking £10,000–£25,000 in grant support to:<br>
-      • Launch the first real-world bounties<br>
-      • Build DAO infrastructure and mainnet contracts<br>
-      • Expand NGO onboarding and AI integration<br>
-      • Seed the treasury for live impact coordination</p>
-
-      <p><strong>Let’s Build a Transparent Future for Impact</strong><br>
-      <a href="mailto:proofofimpactprotocol@gmail.com">proofofimpactprotocol@gmail.com</a></p>
     </div>
 
     <div class="section">
-      <h2>Explore the Simulation</h2>
-      <a class="button" href="stake.html">Stake Simulation</a>
-      <a class="button" href="yield.html">Treasury Yield Tool</a>
-      <a class="button" href="grow.html">$GROW Balance Page</a>
-      <a class="button" href="ai-logic.html">AI Logic Demo</a>
+      <h2>Live Simulation Links</h2>
+      <a class="button" href="stake.html">Staking Interface (Live)</a>
+      <a class="button" href="grow.html">Symbolic $GROW Reward Page</a>
       <a class="button" href="treasury-power.html">Treasury Power Logic</a>
-      <a class="button" href="https://docs.google.com/document/d/11KxHDERELrsdWhGTLcF7VTn0JAna-wwrc2I3F40DKiY" target="_blank">Read Full Whitepaper</a>
+      <a class="button" href="ai-logic.html">AI Logic Demo</a>
+      <a class="button" href="https://docs.google.com/document/d/11KxHDERELrsdWhGTLcF7VTn0JAna-wwrc2I3F40DKiY" target="_blank">View Whitepaper</a>
     </div>
 
     <div class="section">
-      <h2>DAO Governance (Live)</h2>
-      <p>The PoIP DAO is now live on Polygon. $POI holders may vote on proposals to evolve the protocol. Governance is symbolic until full DAO execution infrastructure is in place.</p>
-      <p>1 $POI = 1 Vote | Proposals are created on-chain and voted on by token holders.</p>
-      <a class="button" href="https://polygonscan.com/address/0x432431ef1cAAFeFDF80A27FB1a399A35A858cEC6" target="_blank">View DAO Contract</a>
+      <h2>Important Disclaimers</h2>
+      <p>This demo is for simulation purposes only. $GROW rewards are not yet active and no real-world funding is being disbursed until treasury growth is triggered at £100,000+.</p>
+      <p>All contracts are non-custodial. Stake can be withdrawn at any time. Treasury funds cannot be moved without DAO logic.</p>
     </div>
 
     <div class="section">
-      <h2>Support PoIP on Giveth</h2>
-      <p>You can support the growth of the Proof of Impact Protocol by donating directly through our official Giveth page.</p>
-      <a class="support-button" href="https://giveth.io/project/proof-of-impact-protocol" target="_blank">Donate via Giveth</a>
+      <h2>DAO & Protocol Info</h2>
+      <p><strong>DAO Contract:</strong><br> 0x432431ef1cAAFeFDF80A27FB1a399A35A858cEC6</p>
+      <p><strong>Treasury Vault:</strong><br> 0x30f693555e4a1eb8e76322079b11E12ee439bcC1</p>
+      <p><strong>$POI Token:</strong><br> 0xba0E9625B37C2F52678D096Ad2c33B940FF6C921</p>
     </div>
 
-    <div class="section">
-      <h2>Follow the Mission</h2>
-      <p>Stay updated and help amplify the movement:</p>
-      <a class="follow-button" href="https://x.com/proofofpoip" target="_blank">Follow on Twitter</a>
-    </div>
-
-    <div class="section">
-      <h2>Partner With Us</h2>
-      <p>We invite NGOs, DAOs, and funders to join the mission. Help us scale verifiable global aid and innovation.</p>
-      <p><strong>Contact:</strong><br>
-        <a class="button" href="mailto:proofofimpactprotocol@gmail.com">Email Us</a><br>
-        <a class="button" href="https://github.com/poiarchitect" target="_blank">View on GitHub</a>
-      </p>
+    <div class="footer">
+      Version: PoIP v1.0 — Pre-Funding Simulation Model
     </div>
   </div>
 </body>
