--- a/presentation.html
+++ b/presentation.html
@@ -14,7 +14,7 @@
       text-align: center;
     }
     .container {
-      max-width: 800px;
+      max-width: 900px;
       margin: auto;
       background: white;
       border-radius: 12px;
@@ -24,10 +24,9 @@
     h1, h2 {
       color: #1a73e8;
     }
-    h3 {
-      color: #444;
-      font-weight: normal;
-      margin-top: -10px;
+    .section {
+      margin-top: 40px;
+      text-align: left;
     }
     .button {
       display: inline-block;
@@ -38,69 +37,42 @@
       text-decoration: none;
       border-radius: 8px;
     }
-    .section {
-      margin-top: 40px;
-      text-align: left;
-    }
-    .footer {
-      font-size: 13px;
-      color: #888;
-      margin-top: 40px;
+    code {
+      background: #eef4ff;
+      padding: 2px 6px;
+      border-radius: 5px;
+      font-family: monospace;
     }
   </style>
 </head>
 <body>
   <div class="container">
     <h1>Proof of Impact Protocol (PoIP)</h1>
-    <h3><em>A trustless system for funding real-world impact — transparently, verifiably, and at scale.</em></h3>
+    <p><em>Fully Live – Transparent – On-Chain – Pre-Funding Demo Model</em></p>
 
     <div class="section">
-      <h2>Pitch Summary</h2>
-      <p><strong>Problem:</strong><br>
-      Billions in global aid are lost to inefficiencies, fraud, or bureaucracy. Donors lack transparency, and recipients struggle to access funds directly and verifiably.</p>
-
-      <p><strong>Solution:</strong><br>
-      PoIP is a decentralized public-good protocol that turns crypto staking into verifiable real-world impact. Users stake tokens into a pooled treasury. The yield is used to fund AI-verified bounties (e.g. laptops for schools, clean water, medical supplies). Proof of delivery is posted publicly. Stakers earn symbolic $GROW tokens as reputation rewards.</p>
-
-      <p><strong>How It Works:</strong><br>
-      • Stake $POI → treasury grows<br>
-      • AI selects high-impact bounties<br>
-      • Yield funds the solution directly<br>
-      • On-chain proof confirms completion<br>
-      • Stakers receive symbolic $GROW tokens</p>
-
-      <p><strong>Why It’s Different:</strong><br>
-      • 100% transparent and auditable<br>
-      • AI-powered, DAO-guided coordination<br>
-      • No middlemen or speculation<br>
-      • Only verified bounties are funded<br>
-      • Built with sustainability and scale in mind</p>
+      <h2>Live Contracts (Mainnet Deployed)</h2>
+      <ul>
+        <li><strong>$POI Token:</strong> <code>0xba0E9625B37C2F52678D096Ad2c33B940FF6C921</code></li>
+        <li><strong>$GROW Token:</strong> <code>0x975D8d9D9c62416662d9c01A197522102aADDf20</code></li>
+        <li><strong>Treasury Vault:</strong> <code>0x30f693555e4a1eb8e76322079b11E12ee439bcC1</code></li>
+        <li><strong>Staking Contract:</strong> <code>0x603608E09b9F4AAFd50500003A59E1F9c98E4653</code></li>
+        <li><strong>DAO Contract:</strong> <code>0x432431ef1cAAFeFDF80A27FB1a399A35A858cEC6</code></li>
+      </ul>
+      <div style="margin-top: 20px; padding: 10px; border-left: 4px solid #1a73e8; background: #f0f6ff;">
+        <strong>PoIP Activation Model v1.0</strong><br />
+        <em>This is a pre-funding demo build showing full live infrastructure for staking, treasury, DAO, and symbolic reward logic. Built for transparency, trust, and demonstration purposes.</em>
+      </div>
     </div>
 
     <div class="section">
-      <h2>Live Simulation Links</h2>
-      <a class="button" href="stake.html">Staking Interface (Live)</a>
-      <a class="button" href="grow.html">Symbolic $GROW Reward Page</a>
-      <a class="button" href="treasury-power.html">Treasury Power Logic</a>
-      <a class="button" href="ai-logic.html">AI Logic Demo</a>
-      <a class="button" href="https://docs.google.com/document/d/11KxHDERELrsdWhGTLcF7VTn0JAna-wwrc2I3F40DKiY" target="_blank">View Whitepaper</a>
-    </div>
-
-    <div class="section">
-      <h2>Important Disclaimers</h2>
-      <p>This demo is for simulation purposes only. $GROW rewards are not yet active and no real-world funding is being disbursed until treasury growth is triggered at £100,000+.</p>
-      <p>All contracts are non-custodial. Stake can be withdrawn at any time. Treasury funds cannot be moved without DAO logic.</p>
-    </div>
-
-    <div class="section">
-      <h2>DAO & Protocol Info</h2>
-      <p><strong>DAO Contract:</strong><br> 0x432431ef1cAAFeFDF80A27FB1a399A35A858cEC6</p>
-      <p><strong>Treasury Vault:</strong><br> 0x30f693555e4a1eb8e76322079b11E12ee439bcC1</p>
-      <p><strong>$POI Token:</strong><br> 0xba0E9625B37C2F52678D096Ad2c33B940FF6C921</p>
-    </div>
-
-    <div class="footer">
-      Version: PoIP v1.0 — Pre-Funding Simulation Model
+      <h2>Explore the Protocol</h2>
+      <a class="button" href="stake.html">Staking Interface</a>
+      <a class="button" href="grow.html">$GROW Tracker</a>
+      <a class="button" href="treasury-live.html">Treasury Viewer</a>
+      <a class="button" href="ai-logic.html">AI Demo</a>
+      <a class="button" href="foundation.html">Foundation Info</a>
+      <a class="button" href="https://docs.google.com/document/d/11KxHDERELrsdWhGTLcF7VTn0JAna-wwrc2I3F40DKiY" target="_blank">Whitepaper</a>
     </div>
   </div>
 </body>
