--- a/index.html
+++ b/index.html
@@ -3,14 +3,18 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Proof of Impact Protocol</title>
+  <title>PoIP – Proof of Impact Protocol</title>
   <style>
     body {
-      background: #0d0d0d;
+      background-color: #0a0a0a;
       color: #ffffff;
       font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
       text-align: center;
-      padding: 50px 20px;
+    }
+    .container {
+      padding: 60px 20px;
     }
     h1 {
       font-size: 2.5em;
@@ -19,53 +23,54 @@
     p {
       font-size: 1.2em;
       margin-bottom: 40px;
-      max-width: 600px;
+      max-width: 700px;
       margin-left: auto;
       margin-right: auto;
     }
-    .button-container {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
+    .button-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
       gap: 20px;
-      margin-bottom: 60px;
+      max-width: 800px;
+      margin: 0 auto;
     }
     .button {
-      background: #007bff;
-      border: none;
-      padding: 15px 30px;
+      background-color: #0066ff;
       color: white;
-      font-size: 1em;
-      cursor: pointer;
-      border-radius: 5px;
+      padding: 15px 25px;
       text-decoration: none;
+      border-radius: 8px;
+      font-size: 1em;
       transition: background 0.3s ease;
     }
     .button:hover {
-      background: #0056b3;
+      background-color: #004ecc;
     }
     footer {
+      margin-top: 60px;
+      padding: 20px;
       font-size: 0.9em;
       color: #888;
-      margin-top: 60px;
     }
   </style>
 </head>
 <body>
 
-  <h1>Proof of Impact Protocol (PoIP)</h1>
-  <p>Funding verified global impact through decentralized staking, AI logic, and transparent proof tracking.</p>
+  <div class="container">
+    <h1>Proof of Impact Protocol (PoIP)</h1>
+    <p>A decentralized protocol to fund global impact transparently through staking, yield, and on-chain proof.</p>
 
-  <div class="button-container">
-    <a href="stake.html" class="button">Stake $POI</a>
-    <a href="treasury-live.html" class="button">View Treasury</a>
-    <a href="bounty-fund.html" class="button">NGO Impact Feed</a>
-    <a href="presentation.html" class="button">Project Overview</a>
-    <a href="proof.html" class="button">View Impact Proof</a>
+    <div class="button-grid">
+      <a href="stake.html" class="button">Stake Simulation</a>
+      <a href="treasury-yield.html" class="button">Treasury Yield Simulation</a>
+      <a href="presentation.html" class="button">Live Pitch + One-Pager</a>
+      <a href="bounty-fund.html" class="button">NGO Submission & Funding</a>
+      <a href="proof.html" class="button">View Impact Proof</a> <!-- ✅ New Button -->
+    </div>
   </div>
 
   <footer>
-    &copy; 2025 Proof of Impact Protocol &nbsp;|&nbsp; Powered by Polygon & DAO Infrastructure
+    &copy; 2025 Proof of Impact Protocol &nbsp;|&nbsp; All rights reserved.
   </footer>
 
 </body>
