--- a/index.html
+++ b/index.html
@@ -121,13 +121,26 @@
       <a href="treasury-live.html">Live Treasury</a>
       <a href="presentation.html">View Summary</a>
       <a href="grow.html">$GROW Balance</a>
-      <a href="proof.html">View Impact Proof</a> <!-- ✅ New button added -->
+      <a href="proof.html">View Impact Proof</a>
     </div>
   </div>
 
   <div class="section">
     <h2>Why PoIP Matters</h2>
     <p>This is more than a protocol — it's a movement. Join a global system that verifies where funds go, how they’re used, and lets you contribute directly to real-world change through a transparent, smart-contract-controlled treasury.</p>
+  </div>
+
+  <div class="section">
+    <h2>The PoIP Foundation</h2>
+    <p>
+      The Proof of Impact Foundation is a UK-registered nonprofit that supports the growth and adoption of the PoIP protocol. It plays a coordination role — helping onboard NGOs, securing grant support, and managing public infrastructure like the website and documentation.
+    </p>
+    <p>
+      Importantly, the Foundation holds no $POI or $GROW tokens, cannot access treasury funds, and does not control protocol governance. All on-chain logic is fully decentralized and managed by smart contracts and the PoIP DAO.
+    </p>
+    <p>
+      Over time, as the protocol becomes fully autonomous, the Foundation will phase into an advisory role — supporting AI infrastructure and public transparency without interfering in decision-making.
+    </p>
   </div>
 
 </div>
