--- a/presentation.html
+++ b/presentation.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>PoIP Project Summary</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>PoIP Presentation</title>
   <style>
     body {
       margin: 0;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background-color: #f4f6f9;
+      background-color: #f8f9fc;
       color: #333;
     }
     header {
@@ -18,24 +18,24 @@
       text-align: center;
     }
     header h1 {
+      font-size: 2.8em;
       margin: 0;
-      font-size: 2.5em;
     }
     header p {
-      margin-top: 10px;
       font-size: 1.2em;
+      margin-top: 10px;
     }
     .container {
-      padding: 40px 20px;
       max-width: 1000px;
       margin: auto;
+      padding: 30px 20px;
     }
     .section {
       background: white;
-      border-radius: 10px;
+      border-radius: 12px;
       padding: 30px;
       margin-bottom: 25px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.05);
+      box-shadow: 0 5px 15px rgba(0,0,0,0.05);
     }
     .section h2 {
       margin-top: 0;
@@ -43,7 +43,7 @@
     }
     .buttons {
       text-align: center;
-      margin-top: 35px;
+      margin-top: 40px;
     }
     .buttons a {
       display: inline-block;
@@ -70,57 +70,46 @@
 <body>
 
 <header>
-  <h1>PoIP – Project Overview</h1>
-  <p>Where Proof Meets Impact. Built for Transparency, Purpose & Global Good.</p>
+  <h1>Proof of Impact Protocol</h1>
+  <p>Staking-Driven Treasury for Real-World Change</p>
 </header>
 
 <div class="container">
 
   <div class="section">
-    <h2>Core Concept</h2>
-    <p>The Proof of Impact Protocol (PoIP) is a decentralized funding system that allows users to stake $POI, grow a transparent treasury, and fund verified impact bounties around the world — in areas like aid, innovation, and climate repair. All funds are traceable. All rewards are symbolic. All impact is real.</p>
+    <h2>Live Features</h2>
+    <ul>
+      <li>✅ Stake $POI to grow the treasury</li>
+      <li>✅ Track the real-time treasury balance</li>
+      <li>✅ View symbolic $GROW rewards</li>
+      <li>✅ AI-assisted bounty selection</li>
+      <li>✅ Transparent smart contract deployment</li>
+    </ul>
   </div>
 
   <div class="section">
-    <h2>Staking</h2>
-    <p>Users stake $POI to help grow the PoIP treasury. Their funds are routed into a unified, low-risk DeFi yield pool. 100% of the original $POI is returned after unstaking. As a reward, stakers receive $GROW — a symbolic token with no financial promise but social significance in the PoIP ecosystem.</p>
-  </div>
-
-  <div class="section">
-    <h2>Treasury Logic</h2>
-    <p>The treasury operates using smart contracts with zero human custody. Yield from pooled staking and reserve capital is split 50/50: half reinvested, half allocated to verified impact bounties. All fund flows are transparent, automated, and designed for long-term sustainability. The treasury enters dual-yield mode after £50M is secured.</p>
-  </div>
-
-  <div class="section">
-    <h2>AI + DAO Governance</h2>
-    <p>The protocol uses an AI advisory layer to autonomously source, filter, and propose bounties from trusted NGO feeds. A DAO of $POI holders votes on approvals, treasury updates, and long-term protocol evolution. No centralized control. All decisions are publicly verifiable.</p>
-  </div>
-
-  <div class="section">
-    <h2>Symbolic Rewards</h2>
-    <p>$GROW tokens are issued to stakers as a sign of contribution — not as profit. They represent alignment with real-world good and may unlock privileges in the future DAO (e.g. voting multipliers, social badges, or access roles). PoIP deliberately avoids speculative framing.</p>
-  </div>
-
-  <div class="section">
-    <h2>Transparency</h2>
-    <p>All staking, treasury movements, and bounty disbursements are visible in real-time. Every funded bounty links to a public proof page. This ensures trust, encourages community validation, and builds a fully auditable history of impact.</p>
-  </div>
-
-  <div class="section">
-    <h2>Quick Access</h2>
+    <h2>Live Demos</h2>
     <div class="buttons">
-      <a href="index.html">Return Home</a>
-      <a href="stake.html">Stake Now</a>
-      <a href="treasury-live.html">View Treasury</a>
-      <a href="grow.html">My $GROW</a>
-      <a href="proof.html">Impact Proof</a>
+      <a href="stake.html">Stake</a>
+      <a href="treasury-live.html">Treasury</a>
+      <a href="grow.html">Reward</a>
+      <a href="bounty-fund.html">NGO Logic</a>
+      <a href="proof-impact.html">Proof</a>
+    </div>
+  </div>
+
+  <div class="section">
+    <h2>Whitepaper</h2>
+    <p>Access the latest protocol whitepaper outlining PoIP’s vision, DAO structure, treasury logic, staking incentives, and long-term plan.</p>
+    <div class="buttons">
+      <a href="https://docs.google.com/document/d/1SmkA1FAfP7GJkLuN_aHICzCmODVwEnWTuQzCP5KIt9c/edit">Open Whitepaper</a>
     </div>
   </div>
 
 </div>
 
 <footer>
-  &copy; 2025 Proof of Impact Protocol. Built for global good.
+  &copy; 2025 Proof of Impact Protocol — All Rights Reserved
 </footer>
 
 </body>
